[tool.poetry]
name = "shrimpy"
version = "0.1.13"
description = "A minimal engine for choose-your-own-adventure games."
authors = ["Yosoi <yosoi@protonmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/yosoi/shrimpy"
repository = "https://github.com/yosoi/shrimpy"
classifiers = [
    "Topic :: Games/Entertainment"
]

[tool.poetry.dependencies]
python = "^3.6"
fire = "^0.2.1"
jsonschema = "^3.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
shrimpy = 'shrimpy:activate'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
